Optimization: Faster inplace "+" and "-" for long values with more than one digit
* This reuses long storage if possible, i.e. the number of digits won't
  increase and allocates a new one only if necessary, which it of course
  frequently is not.

* With this, the performance is less dependent on architecture, because
  at least on ARM, a digit is only 2**15 and therefore not that big of
  value.

--- a/nuitka/tools/specialize/templates/HelperSlotsLong.c.j2
+++ b/nuitka/tools/specialize/templates/HelperSlotsLong.c.j2
@@ -34,8 +34,7 @@
     }
 
 {% if target == None %}
-    {# TODO: Enable after testing #}
-    if (Py_REFCNT({{operand1}}) == 1 && false) {
+    if (Py_REFCNT({{operand1}}) == 1) {
         digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
         Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
 
@@ -104,6 +103,38 @@
         PyObject *r = Nuitka_LongFromCLong(MEDIUM_VALUE({{ operand1 }}) - MEDIUM_VALUE({{ operand2 }}));
         {{ goto_exit(props, "exit_result_object", "r") }}
     }
+{% if target == None %}
+    if (Py_REFCNT({{operand1}}) == 1) {
+        digit const *b = Nuitka_LongGetDigitPointer({{ operand2 }});
+        Py_ssize_t size_b = Nuitka_LongGetDigitSize({{ operand2 }});
+
+#if 0
+        PyObject *r = BINARY_OPERATION_SUB_OBJECT_LONG_LONG( {{ operand1 }}, {{ operand2 }} );
+#endif
+        if (Py_SIZE({{ operand1 }}) < 0) {
+            if (Py_SIZE({{ operand2 }}) < 0) {
+                {# Reversed operands order means sign inversion. #}
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, -1);
+            } else {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
+                Py_SIZE({{ operand1 }}) = -Py_ABS(Py_SIZE({{ operand1 }}));
+            }
+        } else {
+            if (Py_SIZE({{ operand2 }}) < 0) {
+                {{ operand1 }} = _Nuitka_LongAddInplaceDigits({{ operand1 }}, b, size_b);
+            } else {
+                {{ operand1 }} = _Nuitka_LongSubInplaceDigits({{ operand1 }}, b, size_b, 1);
+            }
+        }
+
+#if 0
+        assert(PyObject_RichCompareBool(r, {{operand1}}, Py_EQ) == 1);
+        Py_DECREF(r);
+#endif
+
+        {{ goto_exit(props, "exit_result_ok") }}
+    }
+{% endif %}
     {
         PyLongObject *z;
 
