Optimization: Also generate method calls with Jinja2
* Make Jinja2 based code generation for calls the default as well.

* Need to get python-markupsafe from elsewhere, added to RPM spec

* Added helpers for likely/unlikely attributions.

* This is in preparation for adding more call variants to be generated.

--- a/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
+++ b/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
@@ -155,7 +155,7 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject **arg
         // Try to be fast about wrapping the arguments.
         int flags = PyCFunction_GET_FLAGS(called) & ~(METH_CLASS | METH_STATIC | METH_COEXIST);
 
-        if (flags & METH_NOARGS) {
+        if ({{ unlikely_or_likely_from(args_count != 0) }}(flags & METH_NOARGS)) {
 {% if args_count == 0 %}
             // Recursion guard is not strictly necessary, as we already have
             // one on our way to here.
@@ -199,7 +199,7 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject **arg
             );
             return NULL;
 {% endif %}
-        } else if (flags & METH_O) {
+        } else if ({{ unlikely_if(args_count != 1) }}(flags & METH_O)) {
 {% if args_count == 1 %}
             // Recursion guard is not strictly necessary, as we already have
             // one on our way to here.
