Optimization: Faster calls, esp. with keyword arguments
* Make sure specialized calls are also giving C functions SystemError in
  case they return NULL.

* Also make sure we use call code that takes advantage of tuple size
  knowledge for constant positional arguments.

* Check tuple size to catch errors in using the POSARGS tuple variants.

* Add specialization for keywords only and mixed calls for large gains
  as dictionaries might be avoided.

* Merge CompiledCodeHelpers and CompiledFunction for better friendship
  of code.

* For unknown called objects, use "tp_vectorcall" if available for 3.8
  or higher.

* Pass around argument and keyword value vectors as constant values, as
  these are not modified, might help compiler optimization.

--- a/nuitka/codegen/templates/CodeTemplateCallsMethodPositional.j2
+++ b/nuitka/codegen/templates/CodeTemplateCallsMethodPositional.j2
@@ -28,9 +28,9 @@ CALL_FUNCTION_WITH_ARGS{{args_count}}({{ called }}, {{args}})
 PyObject *CALL_METHOD_NO_ARGS(PyObject *source, PyObject *attr_name) {
 {% elif args_count == 1 %}
 PyObject *CALL_METHOD_WITH_SINGLE_ARG(PyObject *source, PyObject *attr_name, PyObject *arg) {
-    PyObject **args = &arg; // For easier code compatibility.
+    PyObject *const *args = &arg; // For easier code compatibility.
 {% else %}
-PyObject *CALL_METHOD_WITH_ARGS{{args_count}}(PyObject *source, PyObject *attr_name, PyObject **args) {
+PyObject *CALL_METHOD_WITH_ARGS{{args_count}}(PyObject *source, PyObject *attr_name, PyObject *const *args) {
 {% endif %}
     CHECK_OBJECT(source);
     CHECK_OBJECT(attr_name);
