--- a/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
+++ b/nuitka/codegen/templates/CodeTemplateCallsPositional.j2
@@ -83,7 +83,35 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
         struct Nuitka_MethodObject *method = (struct Nuitka_MethodObject *)called;
 
         // Unbound method without arguments, let the error path be slow.
-        if (method->m_object != NULL) {
+        if (method->m_object == NULL) {
+{% if args_count < 1 %}
+            PyErr_Format(
+                PyExc_TypeError,
+                "unbound compiled_method %s%s must be called with %s instance as first argument (got nothing instead)",
+                GET_CALLABLE_NAME((PyObject *)method->m_function), GET_CALLABLE_DESC((PyObject *)method->m_function),
+                GET_CLASS_NAME(method->m_class));
+            return NULL;
+{% else %}
+            PyObject *self = args[0];
+
+            int res = PyObject_IsInstance(self, method->m_class);
+
+            if (unlikely(res < 0)) {
+                return NULL;
+            } else if (unlikely(res == 0)) {
+                PyErr_Format(PyExc_TypeError,
+                             "unbound compiled_method %s%s must be called with %s instance as first argument (got %s "
+                             "instance instead)",
+                             GET_CALLABLE_NAME((PyObject *)method->m_function),
+                             GET_CALLABLE_DESC((PyObject *)method->m_function), GET_CLASS_NAME(method->m_class),
+                             GET_INSTANCE_CLASS_NAME((PyObject *)self));
+
+                return NULL;
+            }
+
+            return Nuitka_CallFunctionPosArgs(method->m_function, args, {{args_count}});
+{% endif %}
+        } else {
             if (unlikely(Py_EnterRecursiveCall((char *)" while calling a Python object"))) {
                 return NULL;
             }
@@ -281,41 +309,55 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
             {{args_count}}
         );
 {% endif %}
-{% if False %}
     } else if (PyType_Check(called)) {
         PyTypeObject *type = Py_TYPE(called);
 
         if (type->tp_call == PyType_Type.tp_call) {
             PyTypeObject *called_type = (PyTypeObject *)(called);
 
+{% if args_count == 1 %}
+            {# For single argument, special case "type" itself, this is however unlikely,
+               as this ought to be optimized in normal compilation to built-in call. #}
+            if (unlikely(called == (PyObject *)&PyType_Type)) {
+                PyObject *result = (PyObject *)Py_TYPE(args[0]);
+                Py_INCREF(result);
+                return result;
+            }
+{% endif %}
+
             if (unlikely(called_type->tp_new == NULL)) {
-                PyErr_Format(PyExc_TypeError,
-                            "cannot create '%s' instances",
-                            called_type->tp_name);
+                PyErr_Format(PyExc_TypeError, "cannot create '%s' instances", called_type->tp_name);
                 return NULL;
             }
 
+{% if not has_tuple_arg and args_count != 0 %}
             PyObject *pos_args = NULL;
+{% elif not has_tuple_arg %}
+            PyObject *pos_args = const_tuple_empty;
+{% endif %}
             PyObject *obj;
 
             if (called_type->tp_new == PyBaseObject_Type.tp_new) {
+                if (unlikely(called_type->tp_flags & Py_TPFLAGS_IS_ABSTRACT)) {
+                    formatCannotInstantiateAbstractClass(called_type);
+                    return NULL;
+                }
+
                 obj = called_type->tp_alloc(called_type, 0);
                 CHECK_OBJECT(obj);
             } else {
+{% if not has_tuple_arg and args_count != 0 %}
                 pos_args = MAKE_TUPLE(args, {{args_count}});
+{% endif %}
                 obj = called_type->tp_new(called_type, pos_args, NULL);
-                // TODO: obj = _Py_CheckFunctionResult(obj) for Python3 in debug mode would be nice.
+                {# TODO: obj = _Py_CheckFunctionResult(obj) for Python3 in debug mode #}
             }
 
             if (likely(obj != NULL)) {
-#if {{args_count}} == 1
-                // For single argument, special case "type" itself.
-                if (called_type == &PyType_Type)
-                {
-                    return obj;
-                }
-#endif
                 if (!PyType_IsSubtype(obj->ob_type, called_type)) {
+{% if not has_tuple_arg and args_count != 0 %}
+                    Py_DECREF(pos_args);
+{% endif %}
                     return obj;
                 }
 
@@ -324,37 +366,94 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
 
                 if (NuitkaType_HasFeatureClass(type) && type->tp_init != NULL) {
                     if (type->tp_init == default_tp_init_wrapper) {
+{% if not has_tuple_arg and args_count != 0 %}
                         Py_XDECREF(pos_args);
                         pos_args = NULL;
+{% endif %}
 
-                        PyObject *result = CALL_METHOD_WITH_ARGS{{args_count}}(obj, const_str_plain___init__, args);
-                        Py_XDECREF(result);
+                        PyObject *init_method = _PyType_Lookup(type, const_str_plain___init__);
+
+                        // Not really allowed, since we wouldn't have the default wrapper set.
+                        assert(init_method != NULL);
+
+                        bool is_compiled_function = false;
+
+                        if (likely(init_method != NULL)) {
+                            descrgetfunc func = Py_TYPE(init_method)->tp_descr_get;
+                            if (func == NULL) {
+                                Py_INCREF(init_method);
+                            } else if (func == Nuitka_Function_Type.tp_descr_get) {
+                                is_compiled_function = true;
+                            } else {
+                                init_method = func(init_method, obj, (PyObject *)(type));
+                            }
+                        }
+
+                        if (unlikely(init_method == NULL)) {
+                            if (!ERROR_OCCURRED()) {
+                                SET_CURRENT_EXCEPTION_TYPE0_VALUE0(PyExc_AttributeError, const_str_plain___init__);
+                            }
+
+                            return NULL;
+                        }
+
+                        PyObject *result;
+{% if args_count == 0 %}
+                        if (is_compiled_function) {
+                            result = Nuitka_CallMethodFunctionNoArgs((struct Nuitka_FunctionObject const *)init_method, obj);
+                        } else {
+                            result = CALL_FUNCTION_NO_ARGS(init_method);
+                            Py_DECREF(init_method);
+                        }
+{% elif args_count == 1 %}
+                        if (is_compiled_function) {
+                            result = Nuitka_CallMethodFunctionPosArgs((struct Nuitka_FunctionObject const *)init_method, obj, args, 1);
+                        } else {
+                            result = CALL_FUNCTION_WITH_SINGLE_ARG(init_method, args[0]);
+                            Py_DECREF(init_method);
+                        }
+{% else %}
+                        if (is_compiled_function) {
+                            result = Nuitka_CallMethodFunctionPosArgs((struct Nuitka_FunctionObject const *)init_method, obj, args, {{args_count}});
+                        } else {
+                            result = CALL_FUNCTION_WITH_ARGS{{args_count}}(init_method, args);
+                            Py_DECREF(init_method);
+                        }
+{% endif %}
+
+                        if (unlikely(result == NULL)) {
+                            return NULL;
+                        }
+
+                        Py_DECREF(result);
 
                         if (unlikely(result != Py_None)) {
-                            PyErr_Format(PyExc_TypeError,
-                                        "__init__() should return None, not '%s'",
-                                        Py_TYPE(result)->tp_name);
+                            SET_CURRENT_EXCEPTION_TYPE_COMPLAINT("__init__() should return None, not '%s'", result);
                             return NULL;
                         }
                     } else {
+{% if not has_tuple_arg and args_count != 0 %}
                         if (pos_args == NULL) {
                             pos_args = MAKE_TUPLE(args, {{args_count}});
                         }
+{% endif %}
 
-                        if (type->tp_init(obj, pos_args, NULL) < 0) {
+                        if (unlikely(type->tp_init(obj, pos_args, NULL) < 0)) {
                             Py_DECREF(obj);
-                            Py_DECREF(pos_args);
+{% if not has_tuple_arg and args_count != 0 %}
+                            Py_XDECREF(pos_args);
+{% endif %}
                             return NULL;
                         }
                     }
                 }
             }
 
+{% if not has_tuple_arg and args_count != 0 %}
             Py_XDECREF(pos_args);
-
+{% endif %}
             return obj;
         }
-{% endif %}
 {# TODO: For Python2 old style classes, this should exist. #}
 {% if False %}
     } else if (PyClass_Check(called)) {
@@ -376,6 +475,7 @@ PyObject *CALL_FUNCTION_WITH_ARGS{{args_count}}(PyObject *called, PyObject *cons
     }
 
 #if 0
+    PRINT_NEW_LINE();
     PRINT_STRING("FALLBACK");
     PRINT_ITEM(called);
     PRINT_NEW_LINE();
